jquery lib path update

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,7 +60,7 @@
                         </ul>
                         <ul class="navbar-nav ml-auto mt-10">
                             <li class="nav-item">
-                                <a class="nav-link btn-success" href="#"><i class="fa fa-github"></i> OCDL Repo</a>
+                                <a class="nav-link btn-success" href="https://github.com/OneClickDeepLearning/OneClickDeepLearning"><i class="fa fa-github"></i> OCDL Repo</a>
                             </li>
                         </ul>
                     </div>
@@ -128,11 +128,12 @@
                             </div>
 
 
-                            <div class="col-lg-6 col-md-12" id="Loading" style="margin-top: 5px">
-                                <div style="display:none">
+                            <div class="col-lg-6 col-md-12"  style="margin-top: 5px">
+                                <div id="Loading" style="display:none">
                                     <img src="images/ajax-loader.gif" alt="loading">
                                 </div>
                             </div>
+
                             <div class="col-lg-6 col-md-12" style="margin-top: 5px">
                                 <div class="block">
                                     <!-- Search Button -->
@@ -238,8 +239,7 @@
 </footer>
 
 <!-- JAVASCRIPTS -->
-<script src="plugins/jquery/jquery.min.js"></script>
-<script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="plugins/jquery/dist/jquery.min.js"></script>
 <script src="plugins/tether/js/tether.min.js"></script>
 <script src="plugins/raty/jquery.raty-fa.js"></script>
 <script src="plugins/bootstrap/dist/js/popper.min.js"></script>
