request type bug fixed

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -87,9 +87,9 @@
                         <h2>Supported Code Source</h2>
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <a href=""><i class="fa fa-bed"></i> Github</a></li>
+                                <a href=""><i class="fa fa-github"></i> Github</a></li>
                             <li class="list-inline-item">
-                                <a href=""><i class="fa fa-grav"></i> Git</a>
+                                <a href=""><i class="fa fa-gitlab"></i> Gitlab</a>
                             </li>
 
                         </ul>
