parameter missing fixed

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="col-lg-6 col-md-12" style="margin-top: 5px">
                                 <div class="block d-flex">
-                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 " id="code-ur"
+                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 " id="code-url"
                                            placeholder="Dir Relative Path">
 
                                 </div>
