--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <!-- SITE TITTLE -->
@@ -26,165 +27,155 @@
 </head>
 
 <body class="body-wrapper">
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg  navigation">
-                    <a class="navbar-brand" href="index.html">
-                        <H2>Vulnerability Detector</H2>
-                    </a>
-                    <a>supported by OCDL</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-expand-lg  navigation">
+                        <a class="navbar-brand" href="index.html">
+                            <H2>Vulnerability Detector</H2>
+                        </a>
+                        <a>supported by OCDL</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto main-nav ">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown dropdown-slide">
-                                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
-                                   aria-expanded="false">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ml-auto main-nav ">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item dropdown dropdown-slide">
+                                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     About
                                 </a>
-                            </li>
-                            <li class="nav-item dropdown dropdown-slide">
-                                <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" aria-haspopup="true"
-                                   aria-expanded="false">
+                                </li>
+                                <li class="nav-item dropdown dropdown-slide">
+                                    <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Contact
                                 </a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav ml-auto mt-10">
-                            <li class="nav-item">
-                                <a class="nav-link btn-success" href="https://github.com/OneClickDeepLearning/OneClickDeepLearning"><i class="fa fa-github"></i> OCDL Repo</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+                                </li>
+                            </ul>
+                            <ul class="navbar-nav ml-auto mt-10">
+                                <li class="nav-item">
+                                    <a class="nav-link btn-success" href="https://github.com/OneClickDeepLearning/OneClickDeepLearning"><i class="fa fa-github"></i> OCDL Repo</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!--===============================
+    <!--===============================
 =            Hero Area            =
 ================================-->
 
-<section class="hero-area bg-1 text-center overly">
-    <!-- Container Start -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <!-- Header Contetnt -->
-                <div class="content-block">
-                    <h1> Code Vulnerability Detection </h1>
-                    <p>Find the code vulnerability and increase the project quality Now!</p>
-                    <div class="short-popular-category-list text-center">
-                        <h2>Supported Code Source</h2>
-                        <ul class="list-inline">
-                            <li class="list-inline-item">
-                                <a href=""><i class="fa fa-github"></i> Github</a></li>
-                            <li class="list-inline-item">
-                                <a href=""><i class="fa fa-gitlab"></i> Gitlab</a>
-                            </li>
+    <section class="hero-area bg-1 text-center overly">
+        <!-- Container Start -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- Header Contetnt -->
+                    <div class="content-block">
+                        <h1> Code Vulnerability Detection </h1>
+                        <p>Find the code vulnerability and increase the project quality Now!</p>
+                        <div class="short-popular-category-list text-center">
+                            <h2>Supported Code Source</h2>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href=""><i class="fa fa-github"></i> Github</a></li>
+                                <li class="list-inline-item">
+                                    <a href=""><i class="fa fa-gitlab"></i> Gitlab</a>
+                                </li>
 
-                        </ul>
+                            </ul>
+                        </div>
+
+                    </div>
+                    <!-- Advance Search -->
+                    <div class="advance-search">
+                        <form action="#">
+                            <div class="row">
+                                <!-- Store Search -->
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="block d-flex">
+                                        <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="project-name" placeholder="Project Name">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="block d-flex">
+                                        <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="git-url" placeholder="Git Address">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-12" style="margin-top: 5px">
+                                    <div class="block d-flex">
+                                        <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="branch" placeholder="Branch">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-12" style="margin-top: 5px">
+                                    <div class="block d-flex">
+                                        <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 " id="code-url" placeholder="Dir Relative Path">
+
+                                    </div>
+                                </div>
+
+
+                                <div class="col-lg-6 col-md-12" style="margin-top: 5px">
+                                    <div id="Loading" style="display:none">
+                                        <img src="images/ajax-loader.gif" alt="loading">
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-md-12" style="margin-top: 5px">
+                                    <div class="block">
+                                        <!-- Search Button -->
+                                        <button class="btn btn-info" style="float:right; height: 50px; border-radius: 0rem; " onclick="codeDetect()"><i class="fa fa-search"></i> Detect
+                                    </button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </form>
+
                     </div>
 
                 </div>
-                <!-- Advance Search -->
-                <div class="advance-search">
-                    <form action="#">
-                        <div class="row">
-                            <!-- Store Search -->
-                            <div class="col-lg-6 col-md-12">
-                                <div class="block d-flex">
-                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="project-name"
-                                           placeholder="Project Name">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-12">
-                                <div class="block d-flex">
-                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="git-url"
-                                           placeholder="Git Address">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-12" style="margin-top: 5px">
-                                <div class="block d-flex">
-                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="branch"
-                                           placeholder="Branch">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-12" style="margin-top: 5px">
-                                <div class="block d-flex">
-                                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 " id="code-url"
-                                           placeholder="Dir Relative Path">
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-lg-6 col-md-12"  style="margin-top: 5px">
-                                <div id="Loading" style="display:none">
-                                    <img src="images/ajax-loader.gif" alt="loading">
-                                </div>
-                            </div>
-
-                            <div class="col-lg-6 col-md-12" style="margin-top: 5px">
-                                <div class="block">
-                                    <!-- Search Button -->
-                                    <button class="btn btn-info"
-                                            style="float:right; height: 50px; border-radius: 0rem; "
-                                            onclick="codeDetect()"><i class="fa fa-search"></i> Detect
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-                    </form>
-
-                </div>
-
             </div>
         </div>
-    </div>
-    <!-- Container End -->
-</section>
+        <!-- Container End -->
+    </section>
 
-<!--===================================
+    <!--===================================
 =            Client Slider            =
 ====================================-->
 
 
-<!--===========================================
+    <!--===========================================
 =            Popular deals section            =
 ============================================-->
 
-<section class="popular-deals section bg-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <!-- Section title -->
-                <div class="section-title">
-                    <h2>Result</h2>
-                </div>
-                <div class="row">
-                    <table id="result-table"  class="table product-dashboard-table col-md-12">
-                        <thead>
-                        <tr>
-                            <th>File Name</th>
-                            <th>File Path</th>
-                            <th >Vulnerability</th>
-                            <th>Probability</th>
-                            <th>Tag</th>
-                        </tr>
-                        </thead>
-                        <tbody id="result-body">
-                   <!--     <tr>
+    <section class="popular-deals section bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <!-- Section title -->
+                    <div class="section-title">
+                        <h2>Result</h2>
+                    </div>
+                    <div class="row">
+                        <table id="result-table" class="table product-dashboard-table col-md-12">
+                            <thead>
+                                <tr>
+                                    <th>File Name</th>
+                                    <th>File Path</th>
+                                    <th>Vulnerability</th>
+                                    <th>Probability</th>
+                                    <th>Tag</th>
+                                </tr>
+                            </thead>
+                            <tbody id="result-body">
+                                <!--     <tr>
 
                             <td class="">
                                 <h3>test.java</h3></td>
@@ -198,71 +189,76 @@
                         </tr> -->
 
 
-                        </tbody>
+                            </tbody>
 
-                    </table>
+                        </table>
 
-                    <button id="uploadBtn" class="btn btn-success" style="display: none; float:right; height: 50px; border-radius: 0rem;  width:100%" onclick="uploadTag()"><i class="fa fa-upload"></i> Upload Tag
+                        <button id="uploadBtn" class="btn btn-success" style="display: none; float:right; height: 50px; border-radius: 0rem;  width:100%" onclick="uploadTag()"><i class="fa fa-upload"></i> Upload Tag
                     </button>
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
-<!--============================
+    <!--============================
 =            Footer            =
 =============================-->
-<!-- Footer Bottom -->
-<footer class="footer-bottom">
-    <!-- Container Start -->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-12">
-                <!-- Copyright -->
-                <div class="copyright">
-                    <p>Copyright © 2019. <a href="https://www.concordia.ca/" style="color: dodgerblue;">Concordia
+    <!-- Footer Bottom -->
+    <footer class="footer-bottom">
+        <!-- Container Start -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-12">
+                    <!-- Copyright -->
+                    <div class="copyright">
+                        <p>Copyright © 2019. <a href="https://www.concordia.ca/" style="color: dodgerblue;">Concordia
                         University</a> All Rights Reserved. </p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-12">
+                    <!-- Social Icons -->
+                    <ul class="social-media-icons text-right">
+                        <li>
+                            <a class="fa fa-facebook" href=""></a>
+                        </li>
+                        <li>
+                            <a class="fa fa-twitter" href=""></a>
+                        </li>
+                        <li>
+                            <a class="fa fa-pinterest-p" href=""></a>
+                        </li>
+                        <li>
+                            <a class="fa fa-vimeo" href=""></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-sm-6 col-12">
-                <!-- Social Icons -->
-                <ul class="social-media-icons text-right">
-                    <li><a class="fa fa-facebook" href=""></a></li>
-                    <li><a class="fa fa-twitter" href=""></a></li>
-                    <li><a class="fa fa-pinterest-p" href=""></a></li>
-                    <li><a class="fa fa-vimeo" href=""></a></li>
-                </ul>
-            </div>
         </div>
-    </div>
-    <!-- Container End -->
-    <!-- To Top -->
-    <div class="top-to">
-        <a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
-    </div>
-</footer>
+        <!-- Container End -->
+        <!-- To Top -->
+        <div class="top-to">
+            <a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
+        </div>
+    </footer>
 
-<!-- JAVASCRIPTS -->
-<script src="plugins/jquery/dist/jquery.min.js"></script>
-<script src="plugins/tether/js/tether.min.js"></script>
-<script src="plugins/raty/jquery.raty-fa.js"></script>
-<script src="plugins/bootstrap/dist/js/popper.min.js"></script>
-<script src="plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="plugins/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-<script src="plugins/slick-carousel/slick/slick.min.js"></script>
-<script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
-<script src="plugins/fancybox/jquery.fancybox.pack.js"></script>
-<script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
+    <!-- JAVASCRIPTS -->
+    <script src="plugins/jquery/dist/jquery.min.js"></script>
+    <script src="plugins/tether/js/tether.min.js"></script>
+    <script src="plugins/raty/jquery.raty-fa.js"></script>
+    <script src="plugins/bootstrap/dist/js/popper.min.js"></script>
+    <script src="plugins/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="plugins/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script src="plugins/slick-carousel/slick/slick.min.js"></script>
+    <script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+    <script src="plugins/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
 
-<script src="js/scripts.js"></script>
-<script src="js/index.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
 </html>
-
-
-
